# VTKWebAssemblyExperiment

./: .gitignore  README.md  asset-manifest.json  index.html  service-worker.js
FlyingEdges/: CMakeLists.txt  FlyingEdges.cxx
GenerateModelsFromLabels/: CMakeLists.txt  GenerateModelsFromLabels.cxx  build.sh
MedicalDemo1/: CMakeLists.txt  MedicalDemo1.cxx  build.sh
app/: package-lock.json  package.json
app-no-vis/: package-lock.json  package.json
app-no-vis/public/: index.html
app-no-vis/src/: App.js  index.js
app/config/: webpack.config.dev.js  webpack.config.prod.js
app/public/: index.html
app/src/: App.js  index.js
itk/Pipelines/: FlyingEdgesWasm.js  FlyingEdgesWasm.wasm  GenerateModelsFromLabelsWasm.js  GenerateModelsFromLabelsWasm.wasm  MedicalDemo1Wasm.js  MedicalDemo1Wasm.wasm
static/js/: main.4fa44bbf.js  main.503cd379.js  main.a842e303.js  main.df4e948e.js  main.ec6a8067.js
